Fix build on linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
     # test whether docs build on Linux - required for crates.io
     - os: linux
       env: TARGET=x86_64-unknown-linux-gnu
-      script: cargo doc --verbose --all-targets --target $TARGET
+      script: cargo doc --verbose --all-features --target $TARGET
 
 install:
   - rustup target add $TARGET
